CompositorImplAndroid sets a texture size that may not be aligned FencedAllocator allocation size.

This CL ensures chunk size is aligned with the FencedAllocator allocation size.

BUG=680150
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2623223002
Cr-Commit-Position: refs/heads/master@{#443435}

Former-commit-id: e7225c311f5be2450e84dc6f8e0548a699787bb3